--- a/01.HTMLCSS/01.프로필페이지/profile.html
+++ b/01.HTMLCSS/01.프로필페이지/profile.html
@@ -4,6 +4,7 @@
         <!-- 문서의 부가적인 정보 -->
         <meta charset="utf-8">
         <title>나를 소개하는 페이지</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <!-- 화면에 표시되는 곳 -->
