--- a/01.HTMLCSS/01.프로필페이지/profile.html
+++ b/01.HTMLCSS/01.프로필페이지/profile.html
@@ -9,12 +9,12 @@
     <body>
         <!-- 화면에 표시되는 곳 -->
         <h1>About Me</h1>
-        <img src="my_profile.jpg" alt="프로필이미지" width="400" height="300">
+        <img src="my_profile.jpg" alt="프로필이미지" width="300" height="300">
         <p>A Programming Creator, Startcoding</p>
         <ul>
-            <li><a href="">유튜브</a></li>
-            <li><a href="">페이스북</a></li>
-            <li><a href="">인스타그램</a></li>
+            <li><a href="" class="link">유튜브</a></li>
+            <li><a href="" class="link">페이스북</a></li>
+            <li><a href="" class="link">인스타그램</a></li>
         </ul>
         <table border='1'>
             <tr>
